# strace-ndk

./: .gitmodules  README.md  settings.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
lib/: build.gradle.kts
lib/src/main/: CMakeLists.txt  bridge.c  bridgexx.cpp
